--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/erdemuslu/workflow/issues"
   },
-  "homepage": "https://github.com/erdemuslu/workflow#readme"
+  "homepage": "https://github.com/erdemuslu/workflow#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.2.1"
+  }
 }
