--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-sass": "^3.2.1"
   }
 }
