--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.2.1"
   }
 }
