--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-newer": "^1.4.0",
     "gulp-sass": "^3.2.1",
     "jquery": "^3.3.1",
     "merge-stream": "^1.0.1",
