--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-inject-partials": "^1.0.4",
     "gulp-newer": "^1.4.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.2.1",
     "jquery": "^3.3.1",
