--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.2.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "merge-stream": "^1.0.1",
     "popper.js": "^1.14.1"
   },
