--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.5.0",
     "gulp-imagemin": "^4.1.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-newer": "^1.4.0",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.2.1",
