--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.2.1",
     "gulp-sourcemaps": "^2.6.4",
+    "hoek": "^5.0.3",
     "lodash": "^4.17.5",
     "merge-stream": "^1.0.1",
     "popper.js": "^1.14.1",
