add jquery into bower

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "devDependencies": {
     "normalize.css": "normalize-css#^8.0.0",
-    "bootstrap": "^4.0.0"
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1"
   }
 }
