--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "hoek": "^5.0.3",
     "lodash": "^4.17.5",
     "merge-stream": "^1.0.1",
+    "node-mime": "^1.0.0",
     "popper.js": "^1.14.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
