--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.24.7",
     "browserify": "^16.1.1",
-    "gulp": "^3.9.1",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.5.0",
+    "gulp-connect": "^5.6.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-newer": "^1.4.0",
@@ -50,6 +53,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "debug": "^4.0.1",
     "uglify-js": "^3.3.16"
   }
 }
