add tasks folder

--- a/package.json
+++ b/package.json
@@ -27,33 +27,36 @@
     "babel-core": "^6.26.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-preset-env": "^1.6.1",
-    "babelify": "^8.0.0",
-    "browser-sync": "^2.24.7",
-    "browserify": "^16.1.1",
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^5.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-newer": "^1.4.0",
+    "hoek": "^5.0.3",
+    "lodash": "^4.17.5",
+    "node-mime": "^1.0.0",
+    "popper.js": "^1.14.1"
+  },
+  "dependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.1.5",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.24.7",
+    "browserify": "^16.2.3",
+    "cssnano": "^4.1.4",
+    "gulp": "gulpjs/gulp.git#4.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.6.1",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-newer": "^1.4.0",
-    "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.2.1",
+    "gulp-minify": "^3.1.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "hoek": "^5.0.3",
-    "lodash": "^4.17.5",
     "merge-stream": "^1.0.1",
-    "node-mime": "^1.0.0",
-    "popper.js": "^1.14.1",
+    "uglify-js": "^3.4.9",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
-  },
-  "dependencies": {
-    "debug": "^4.0.1",
-    "uglify-js": "^3.3.16"
   }
 }
