--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Frontend Boilerplate with sass, pug, browserify and more",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf bower_components && rm -rf node_modules && build",
+    "setup": "yarn install && bower install && gulp setup",
+    "start": "gulp",
+    "build": "rm -rf build && gulp setup"
   },
   "repository": {
     "type": "git",
@@ -22,21 +25,7 @@
     "url": "https://github.com/erdemuslu/frontend-boilerplate/issues"
   },
   "homepage": "https://github.com/erdemuslu/frontend-boilerplate#readme",
-  "devDependencies": {
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-newer": "^1.4.0",
-    "hoek": "^5.0.3",
-    "lodash": "^4.17.5",
-    "node-mime": "^1.0.0",
-    "popper.js": "^1.14.1"
-  },
+  "devDependencies": {},
   "dependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
